<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">MADN3SController</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="description_arrow_front">Front Arrow</string>
    <string name="description_arrow_left">Left Arrow</string>
    <string name="description_arrow_back">Back Arrow</string>
    <string name="description_arrow_right">Right Arrow</string>
    <string name="new_devices">New Devices</string>
    <string name="paired_devices">Paired Devices</string>
    <string name="cameras">Cameras</string>
    <string name="nxt">NXT</string>
    <string name="connect">Connect</string>
    <string name="scan">Scan</string>
    <string name="hint_indicator_device_not_connected_">Device Not Connected Indicator</string>
    <string name="hint_indicator_device_connected_">Device Connected Indicator</string>

</resources>
