<?xml version="1.0" encoding="utf-8"?>

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical"
    android:gravity="center_horizontal">

    <SurfaceView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/surfaceView" android:layout_centerInParent="true" android:visibility="gone"/>
    <TextView
        android:id="@+id/address_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:layout_margin="40dp" android:layout_weight="4" android:layout_alignParentLeft="true"
        android:layout_marginLeft="384dp" android:layout_alignParentTop="true" android:layout_marginTop="80dp"/>

    <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:layout_alignParentTop="false"
            android:layout_alignParentBottom="true" android:layout_alignParentLeft="true">
        <ImageView
                android:id="@+id/front_arrow_imageView"
                android:layout_width="@dimen/arrow_side"
                android:layout_height="@dimen/arrow_side"
                android:layout_gravity="center_horizontal"
                android:background="@drawable/arrow_front"
                android:contentDescription="@string/description_arrow_front" android:layout_alignParentTop="false"
                android:layout_centerHorizontal="true"/>
        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:orientation="horizontal"
                android:gravity="center_horizontal"
                android:layout_centerHorizontal="true" android:layout_below="@+id/front_arrow_imageView"
                android:id="@+id/side_arrows_layout">

                <ImageView
                    android:id="@+id/left_arrow_imageView"
                    android:layout_width="@dimen/arrow_side"
                    android:layout_height="@dimen/arrow_side"
                    android:layout_gravity="left"
                    android:background="@drawable/arrow_left"
                    android:contentDescription="@string/description_arrow_left" />

            <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:id="@+id/imageView"
                    android:src="@drawable/circle"/>
            <ImageView
                    android:id="@+id/right_arrow_imageView"
                    android:layout_width="@dimen/arrow_side"
                    android:layout_height="@dimen/arrow_side"
                    android:layout_gravity="right"
                    android:background="@drawable/arrow_right"
                    android:contentDescription="@string/description_arrow_right" />
        </LinearLayout>
        <ImageView
            android:id="@+id/back_arrow_imageView"
            android:layout_width="@dimen/arrow_side"
            android:layout_height="@dimen/arrow_side"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/arrow_back"
            android:contentDescription="@string/description_arrow_back"
            android:layout_centerHorizontal="true" android:layout_below="@+id/side_arrows_layout"/>
    </RelativeLayout>

</RelativeLayout>



